--- a/Animal_Catalog/src/index.css
+++ b/Animal_Catalog/src/index.css
@@ -2,4 +2,5 @@ body{
     margin: 0;
     padding: 0;
     /* background-color: rgba(14, 11, 11, 0.7); ; */
+    /* background-color: rgb(43, 71, 85); */
 }
