--- a/Animal_Catalog/src/styles/atoms/Header.css
+++ b/Animal_Catalog/src/styles/atoms/Header.css
@@ -1,54 +1,108 @@
 .header {
-    display: flex;
-    /* justify-content: space-evenly; */
-    align-items: center;
-    /* gap: 0.625rem; = */
-    padding: 0.75rem 0;
-    margin: 0;
-    background: rgba(14, 11, 11, 0.7); 
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
+	display: flex;
+	/* justify-content: space-evenly; */
+	align-items: center;
+	/* gap: 0.625rem; = */
+	padding: 0.75rem 0;
+	margin: 0;
+	background: rgba(14, 11, 11, 0.7);
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
 }
 
-
-
-.header-logo{
-    margin-left: 7rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.625rem;
+.header-logo {
+	margin-left: 7rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 0.625rem;
 }
 
 .header__icon {
-    width: 3rem; 
+	width: 3rem;
+}
+
+.header-menu-icon-container {
+	margin-left: auto;
+}
+
+.header-menu-icon {
+	color: white;
+	font-size: 2rem;
+	cursor: pointer;
+	display: none;
 }
 
 .header__title {
-    font-family: monospace, sans-serif;
-    color: white;
-    font-size: 1.5rem;
+	font-family: monospace, sans-serif;
+	color: white;
+	font-size: 1.5rem;
 }
 
 .header-nav {
-    display: flex;
-    align-items: center;
-    gap: 0.625rem;
-    margin-left: auto;
-    margin-right: 7rem;
+	display: flex;
+	align-items: center;
+	gap: 0.625rem;
+	margin-left: auto;
+	margin-right: 7rem;
 }
 
-
-.header-navlinks-link{
-    color: white;
-    text-decoration: none;
-    transition: all ease-in-out 0.8s;
+.header-navlinks-link {
+	color: white;
+	text-decoration: none;
+	transition: all ease-in-out 0.8s;
 }
 
 .header-navlinks-link:hover {
-    color: #f7f7f7;
-    text-decoration: underline;
+	color: #f7f7f7;
+	text-decoration: underline;
 }
 
+@media screen and (max-width: 630px) {
+    .header-logo {
+        margin-left: 2rem;
+    }
+
+    .header__title {
+        font-size: 1.2rem;
+    }
+
+    .header-nav {
+        margin-right: 2rem;
+    }
+}
+
+@media screen and (max-width: 510px) {
+    .header-menu-icon {
+        display: block;
+    }
+
+    .header-menu-icon:hover {
+        color: #939393;
+    }
+
+    .header-menu-icon-container {
+        margin-right: 2rem;
+    }
+
+    .header-nav {
+        display: none;
+    }
+
+    .header-nav.open-menu {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        position: absolute;
+        top: 4.75rem;
+        /* left: 0; */
+        right: 0;
+        background: rgba(14, 11, 11, 0.7);
+        /* width: 100%; */
+        padding: 1rem 3rem;
+        z-index: 1000;
+        margin: 0;
+    }
+}
