--- a/Animal_Catalog/src/styles/molecules/Modal.css
+++ b/Animal_Catalog/src/styles/molecules/Modal.css
@@ -27,3 +27,9 @@
     justify-content: flex-end;
     width: 100%;
 }
+
+@media screen and (max-width: 697px){
+    .modal{
+        padding: 1rem;
+    }
+}
