made some changes to UI

--- a/Animal_Catalog/src/styles/atoms/Hero.css
+++ b/Animal_Catalog/src/styles/atoms/Hero.css
@@ -48,3 +48,12 @@
     color: white; 
     margin-top: 1rem;
 }
+
+
+@media screen and (max-width: 567px) {
+
+    .hero__section__content{
+        align-items: flex-start;
+    }
+    
+}
