--- a/Animal_Catalog/src/index.css
+++ b/Animal_Catalog/src/index.css
@@ -1,6 +1,5 @@
 body{
     margin: 0;
     padding: 0;
-    /* background-color: rgba(14, 11, 11, 0.7); ; */
-    /* background-color: rgb(43, 71, 85); */
+    background-color: #f5f5f5;
 }
