Added some final changes tu UI

--- a/Animal_Catalog/src/styles/atoms/Filter.css
+++ b/Animal_Catalog/src/styles/atoms/Filter.css
@@ -11,3 +11,14 @@
 .filter-input-wrapp{
     width: 60%;
 }
+
+@media screen and (max-width: 768px){
+    .filter{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .filter-input-wrapp{
+        width: 100%;
+    }
+    
+}
