--- a/Animal_Catalog/src/styles/atoms/AnimalMenuCard.css
+++ b/Animal_Catalog/src/styles/atoms/AnimalMenuCard.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height: fit-content; 
     max-width: 41rem;
-    background-color: #d1d5db; 
+    background-color: #fff; 
     border-radius: 0.5rem; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
     padding-bottom: 1.25rem;
