--- a/Animal_Catalog/src/styles/organism/ContactUs.css
+++ b/Animal_Catalog/src/styles/organism/ContactUs.css
@@ -40,6 +40,13 @@
     gap: 2rem;
 }
 
+.form-error-message{
+    color: red;
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: monospace, sans-serif;
+}
+
 @media screen and (max-width: 697px) {
     .contact-section-form{
         padding: 1rem;
@@ -53,5 +60,9 @@
     .form-button-row{
         flex-direction: column;
         gap: 1rem;
+    }
+
+    .contact-section-subtext{
+        margin-left: 15px;
     }
 }
