--- a/Animal_Catalog/src/styles/atoms/AboutUsRow.css
+++ b/Animal_Catalog/src/styles/atoms/AboutUsRow.css
@@ -1,7 +1,7 @@
 .about-us-row{
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     /* width: 80%; */
     padding: 0 70px;
     margin: 40px 0;
