--- a/Animal_Catalog/src/styles/atoms/AnimalMenuCard.css
+++ b/Animal_Catalog/src/styles/atoms/AnimalMenuCard.css
@@ -39,6 +39,13 @@
     margin-top: 1.5rem; 
 }
 
+.animal-menu-card-habitat {
+    font-size: 1.1rem; 
+    font-weight: 500; 
+    margin-top: 0.5rem; 
+    padding: 0 15px;
+}
+
 .animal-menu-card-button {
     margin-top: 1rem;
     padding: 0.7rem 1.2rem; 
